--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-streamlit==1.31.0
-neo4j==5.16.0
+streamlit==1.32.0
+neo4j==5.18.0
 openai==1.12.0
-plotly==5.18.0
-pandas==2.1.4
-folium==0.15.1
-streamlit-folium==0.17.0
-python-dotenv==1.0.0
-networkx==3.2.1
+python-dotenv==1.0.1
+plotly==5.19.0
+pandas==2.2.1
+scikit-learn==1.4.1
 pyvis==0.3.2
-scikit-learn==1.4.0
+streamlit-folium==0.18.0
+folium==0.16.0
+numpy==1.26.4
