--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ openai==1.12.0
 python-dotenv==1.0.1
 plotly==5.19.0
 pandas==2.2.1
-scikit-learn==1.4.1
+scikit-learn==1.4.1.post1
 pyvis==0.3.2
 streamlit-folium==0.18.0
 folium==0.16.0
